force-app/main/default/objects/AI_Feedback__c/AI_Feedback__c.object-meta.xml
<CustomObject>
    <label>AI Feedback</label>
    <pluralLabel>AI Feedback</pluralLabel>
    <nameField>
        <displayFormat>AIF-{00000000}</displayFormat>
        <label>Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>