force-app/main/default/objects/AI_Feedback__c/fields/Insight__c.field-meta.xml
<CustomField>
    <fullName>Insight__c</fullName>
    <description
  >Feedback can target either an AI_Recommendation__c or a legacy AI_Insight__c - exactly one should be populated.</description>
    <label>Insight</label>
    <type>Lookup</type>
    <referenceTo>AI_Insight__c</referenceTo>
    <relationshipName>Feedback</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>