force-app/main/default/objects/AI_Feedback__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Helpful</fullName>
                <default>true</default>
                <label>Helpful</label>
            </value>
            <value>
                <fullName>Not Helpful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>