force-app/main/default/objects/AI_Feedback__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <label>Recommendation</label>
    <type>Lookup</type>
    <referenceTo>AI_Recommendation__c</referenceTo>
    <relationshipName>Feedback</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>