force-app/main/default/objects/AI_Feedback__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <label>Submitted By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>AI Feedback</relationshipLabel>
    <relationshipName>AI_Feedback_Submissions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>